# rust_code_gen_example

./: Cargo.toml
app/: Cargo.toml  build.rs
app/benches/: my_benchmark.rs
app/src/: lib.rs
trib_macros/: Cargo.toml
trib_macros/src/: lib.rs
